<resources>
    <string name="app_name">HawkeRise</string>

    <string name="stalls"> stalls</string>
    <string name="FindHCWithin">Find Hawker Centres within: </string>
    <string name="listHC">List of Hawker Centres in Singapore</string>
    <string name="FindAll">Find All</string>
    <string name="lessThan1km"> &lt;1km </string>
    <string name="lessThan3km"> &lt;3km </string>
    <string name="lessThan5km"> &lt;5km </string>
    <string name="zeroKm">0km</string>
    <string name="thirtyKm">30km</string>
    <string name="filterByDist">Filter by distance from my current location:</string>
    <string name="NumStalls1">Here are the&#160;</string>
    <string name="NumStalls2">&#160;stalls in&#160;</string>
    <string name="NumStalls3"> : </string>

    <string name="Search"> Search </string>

    <string name="Unit_Number">Unit Number:&#160;#</string>
    <string name="Contact_Number">Contact Number:&#160;</string>

    <string name="menuItemName">Menu Item Name</string>
    <string name="menuItemDesc">Description: %1$s</string>
    <string name="menuItemPrice">Price: $</string>
    <string name="menuItemStatus">Status: %1$s</string>
    <string name="hsName">Hawker Stall Name</string>

    <string name="welcome_guest">Hello Guest, here are the top rated stalls by our registered users:</string>
    <string name="welcome_user">, here are some stall recommendations that we have specially curated for you:</string>

</resources>
