<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HawkersFragment"
    android:orientation="vertical">

    <TextView
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/listHC"
        android:textStyle="bold"/>

    <TextView
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/filterByDist"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

    <TextView
        android:text="@string/zeroKm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"/>

    <com.google.android.material.slider.Slider
        android:id="@+id/hawker_slider"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:valueFrom="0.0"
        android:valueTo="30.0"
        android:stepSize="1.0"
        />

    <TextView
        android:text="@string/thirtyKm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/allStalls_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:text="@string/FindAll" />

    <ProgressBar
        android:id="@+id/hawkers_pb"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <ListView
        android:id="@+id/hawkers_lv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
    </ListView>

</LinearLayout>